name:           examples
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/lehins/massiv#readme>
homepage:       https://github.com/lehins/massiv
bug-reports:    https://github.com/lehins/massiv/issues
author:         Alexey Kuleshevich
maintainer:     alexey@kuleshevi.ch
copyright:      2018 Alexey Kuleshevich
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
                   ChangeLog.md
                   README.md

source-repository head
  type: git
  location: https://github.com/lehins/massiv

library
  hs-source-dirs:
      src
  build-depends:
                base >=4.7 && <5
              , data-default
              , massiv
              , massiv-io
  exposed-modules:
                  Examples.Convolution
  default-language: Haskell2010

executable examples
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >=4.7 && <5
              , examples
              , massiv
              , massiv-io
  default-language: Haskell2010


executable life
  main-is: GameOfLife.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >=4.7 && <5
              , examples
              , massiv
              , massiv-io
              , vector
              , GLUT
  default-language: Haskell2010

executable mkfilter
  main-is: MakeFilter.hs
  hs-source-dirs: app
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >=4.7 && <5
              , examples
              , massiv
  default-language: Haskell2010
