name:                massiv-io
version:             0.2.0.0
synopsis:            Import/export of Image files into massiv Arrays
description:         This package contains functionality for import/export of arrays
                     into the real world. For now it only has the ability to read/write
                     image files in various formats.
homepage:            https://github.com/lehins/massiv
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2018-2019 Alexey Kuleshevich
category:            Data, Data Structures
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Massiv.Array.IO
  other-modules:       Data.Massiv.Array.IO.Base
                     , Data.Massiv.Array.IO.Image
                     --, Data.Massiv.Array.IO.Image.JuicyPixels
                     , Data.Massiv.Array.IO.Image.JuicyPixels.Base
                     -- , Data.Massiv.Array.IO.Image.JuicyPixels.BMP
                     -- , Data.Massiv.Array.IO.Image.JuicyPixels.GIF
                     -- , Data.Massiv.Array.IO.Image.JuicyPixels.HDR
                     -- , Data.Massiv.Array.IO.Image.JuicyPixels.JPG
                     -- , Data.Massiv.Array.IO.Image.JuicyPixels.PNG
                     , Data.Massiv.Array.IO.Image.JuicyPixels.TGA
                     , Data.Massiv.Array.IO.Image.JuicyPixels.TIF
                     , Data.Massiv.Array.IO.Image.Netpbm
  build-depends:       base            >= 4.8 && < 5
                     , bytestring
                     , color-space
                     , data-default-class
                     , deepseq
                     , directory
                     , exceptions
                     , filepath        >= 1.0
                     , massiv          >= 0.3
                     , process
                     , JuicyPixels     >= 3.3
                     , netpbm
                     , unliftio        >= 0.2.12
                     , unliftio-core
                     , vector          >= 0.10
  default-language:    Haskell2010
  ghc-options:         -Wall
  if os(windows)
    CPP-options:      -DOS_Win32
  else
    if os(linux)
      CPP-options:    -DOS_Linux
    else
      if os(darwin)
        CPP-options:  -DOS_Mac

source-repository head
  type:     git
  location: https://github.com/lehins/massiv
