name:                massiv-io
version:             0.2.0.0
synopsis:            Import/export of Image files into massiv Arrays
description:         This package contains functionality for import/export of arrays
                     into the real world. For now it only has the ability to read/write
                     image files in various formats.
homepage:            https://github.com/lehins/massiv
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2018-2020 Alexey Kuleshevich
category:            Data, Data Structures
build-type:          Custom
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10
custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest >=1.0.6

library
  hs-source-dirs:      src
  exposed-modules:     Data.Massiv.Array.IO
                     , Graphics.ColorSpace
  other-modules:       Data.Massiv.Array.IO.Base
                     , Data.Massiv.Array.IO.Image
                     , Data.Massiv.Array.IO.Image.JuicyPixels
                     , Data.Massiv.Array.IO.Image.JuicyPixels.Base
                     , Data.Massiv.Array.IO.Image.JuicyPixels.BMP
                     , Data.Massiv.Array.IO.Image.JuicyPixels.GIF
                     , Data.Massiv.Array.IO.Image.JuicyPixels.HDR
                     , Data.Massiv.Array.IO.Image.JuicyPixels.JPG
                     , Data.Massiv.Array.IO.Image.JuicyPixels.PNG
                     , Data.Massiv.Array.IO.Image.JuicyPixels.TGA
                     , Data.Massiv.Array.IO.Image.JuicyPixels.TIF
                     , Data.Massiv.Array.IO.Image.Netpbm
  build-depends:       base            >= 4.8 && < 5
                     , bytestring
                     , Color           >= 0.1.2
                     , data-default-class
                     , deepseq
                     , exceptions
                     , filepath
                     , massiv          >= 0.3
                     , JuicyPixels     >= 3.3
                     , netpbm
                     , unliftio        >= 0.2.12
                     , vector          >= 0.10
  default-language:    Haskell2010
  ghc-options:         -Wall
  if os(windows)
    CPP-options:      -DOS_Win32
  else
    if os(linux)
      CPP-options:    -DOS_Linux
    else
      if os(darwin)
        CPP-options:  -DOS_Mac

source-repository head
  type:     git
  location: https://github.com/lehins/massiv

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctests.hs
  build-depends: base
               , doctest >=0.15
               , QuickCheck
               , template-haskell
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/massiv
