name:                massiv-scheduler
version:             0.1.0.0
synopsis:            Work scheduler for Massiv (Массив) and other parallel applications.
description:         A work stealing scheduler that is used by [massiv](https://www.stackage.org/package/massiv) array librarry, but can be useful for any other library or application that fits such model of computation.
homepage:            https://github.com/lehins/massiv
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2018-2019 Alexey Kuleshevich
category:            Data, Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Massiv.Scheduler
                     , Data.Massiv.Scheduler.Computation

  other-modules:       Data.Massiv.Scheduler.Queue
  build-depends:       base            >= 4.8 && < 5
                     , atomic-primops
                     , deepseq
                     , exceptions
                     , ghc-prim

  default-language:    Haskell2010
  ghc-options:         -Wall


test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Spec
                    , Data.Massiv.SchedulerSpec
  build-depends:      base            >= 4.8 && < 5
                    , deepseq
                    , massiv-scheduler
                    , hspec
                    , QuickCheck

  default-language:   Haskell2010
  ghc-options:        -Wall -fno-warn-orphans -threaded -with-rtsopts=-N


source-repository head
  type:     git
  location: https://github.com/lehins/massiv
