name:                massiv-scheduler
version:             0.1.1.0
synopsis:            Work stealing scheduler for Massiv (Массив) and other parallel applications.
description:         A work stealing scheduler that is used by [massiv](https://www.stackage.org/package/massiv) array librarry, but can be useful for any other library or application that fits such model of computation.
homepage:            https://github.com/lehins/massiv
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2018-2019 Alexey Kuleshevich
category:            Parallelism, Concurrency
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.10

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest  >=1.0.6

library
  hs-source-dirs:      src
  exposed-modules:     Control.Massiv.Scheduler

  other-modules:       Control.Massiv.Scheduler.Computation
                     , Control.Massiv.Scheduler.Queue
  build-depends:       base            >= 4.9 && < 5
                     , atomic-primops
                     , deepseq
                     , exceptions
                     , unliftio-core

  default-language:    Haskell2010
  ghc-options:         -Wall


test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Spec
                    , Control.Massiv.SchedulerSpec
  build-depends:      base
                    , deepseq
                    , massiv-scheduler
                    , hspec
                    , QuickCheck
                    , unliftio

  default-language:   Haskell2010
  ghc-options:        -Wall -fno-warn-orphans -threaded -with-rtsopts=-N

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctests.hs
  build-depends: base
               , doctest           >=0.15
               , massiv-scheduler
               , template-haskell
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/massiv
