name:                massiv-test
version:             1.1.0.0
synopsis:            Library that contains generators, properties and tests for Massiv Array Library.
description:         This library is designed for users of massiv library that need random generators for writing custom property tests and reusing some of the predefined ones.
homepage:            https://github.com/lehins/massiv
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2018-2022 Alexey Kuleshevich
category:            Data, Data Structures, Parallelism
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Test.Massiv.Core
                    , Test.Massiv.Core.Common
                    , Test.Massiv.Core.Index
                    , Test.Massiv.Core.Mutable
                    , Test.Massiv.Array.Delayed
                    , Test.Massiv.Array.Load
                    , Test.Massiv.Array.Mutable
                    , Test.Massiv.Array.Numeric
                    , Test.Massiv.Utils


  build-depends:       base >= 4.9 && < 5
                     , bytestring
                     , data-default-class
                     , deepseq
                     , exceptions
                     , QuickCheck >= 2.14
                     , quickcheck-classes-base
                     , hspec
                     , massiv >= 1.0 && < 2
                     , scheduler
                     , primitive
                     , unliftio
                     , vector

  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -fno-warn-orphans
  if impl(ghc >= 8.2)
    ghc-options:
                      -Wincomplete-uni-patterns
  else
    ghc-options:
                      -Wno-incomplete-patterns
                      -Wno-unused-imports

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Spec
                    , Test.Massiv.Array.Delayed.StreamSpec
                    , Test.Massiv.Array.Delayed.InterleavedSpec
                    , Test.Massiv.Array.Delayed.PushSpec
                    , Test.Massiv.Array.Delayed.WindowedSpec
                    , Test.Massiv.Array.DelayedSpec
                    , Test.Massiv.Array.MutableSpec
                    , Test.Massiv.Array.Ops.ConstructSpec
                    , Test.Massiv.Array.Ops.FoldSpec
                    , Test.Massiv.Array.Ops.MapSpec
                    , Test.Massiv.Array.Ops.SliceSpec
                    , Test.Massiv.Array.Ops.SortSpec
                    , Test.Massiv.Array.Ops.TransformSpec
                    , Test.Massiv.Array.Manifest.PrimitiveSpec
                    , Test.Massiv.Array.Manifest.VectorSpec
                    , Test.Massiv.Array.Manifest.UnboxedSpec
                    , Test.Massiv.Array.ManifestSpec
                    , Test.Massiv.Array.NumericSpec
                    , Test.Massiv.Array.Numeric.IntegralSpec
                    , Test.Massiv.Array.StencilSpec
                    , Test.Massiv.ArraySpec
                    , Test.Massiv.VectorSpec
                    , Test.Massiv.Core.IndexSpec
                    , Test.Massiv.Core.ListSpec
                    , Test.Massiv.Core.SchedulerSpec
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:      base
                    , bytestring
                    , containers
                    , data-default
                    , deepseq
                    , massiv
                    , massiv-test
                    , mwc-random
                    , hspec
                    , primitive
                    , scheduler
                    , QuickCheck
                    , quickcheck-classes-base
                    , vector

  default-language:   Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-record-updates
                     -Wredundant-constraints
                     -fno-warn-orphans
                     -threaded
                     -with-rtsopts=-N2
  if impl(ghc >= 8.2)
    ghc-options:
                      -Wincomplete-uni-patterns
  else
    ghc-options:
                      -Wno-incomplete-patterns
                      -Wno-unused-imports


test-suite tests-O0
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Spec
                    , Test.Massiv.Array.Delayed.StreamSpec
                    , Test.Massiv.Array.Delayed.InterleavedSpec
                    , Test.Massiv.Array.Delayed.PushSpec
                    , Test.Massiv.Array.Delayed.WindowedSpec
                    , Test.Massiv.Array.DelayedSpec
                    , Test.Massiv.Array.MutableSpec
                    , Test.Massiv.Array.Ops.ConstructSpec
                    , Test.Massiv.Array.Ops.FoldSpec
                    , Test.Massiv.Array.Ops.MapSpec
                    , Test.Massiv.Array.Ops.SliceSpec
                    , Test.Massiv.Array.Ops.SortSpec
                    , Test.Massiv.Array.Ops.TransformSpec
                    , Test.Massiv.Array.Manifest.PrimitiveSpec
                    , Test.Massiv.Array.Manifest.VectorSpec
                    , Test.Massiv.Array.Manifest.UnboxedSpec
                    , Test.Massiv.Array.ManifestSpec
                    , Test.Massiv.Array.NumericSpec
                    , Test.Massiv.Array.Numeric.IntegralSpec
                    , Test.Massiv.Array.StencilSpec
                    , Test.Massiv.ArraySpec
                    , Test.Massiv.VectorSpec
                    , Test.Massiv.Core.IndexSpec
                    , Test.Massiv.Core.ListSpec
                    , Test.Massiv.Core.SchedulerSpec
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:      base
                    , bytestring
                    , containers
                    , data-default
                    , deepseq
                    , massiv
                    , massiv-test
                    , mwc-random
                    , hspec
                    , primitive
                    , scheduler
                    , QuickCheck
                    , quickcheck-classes-base
                    , vector

  default-language:   Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-record-updates
                     -Wredundant-constraints
                     -fno-warn-orphans
                     -threaded
                     -with-rtsopts=-N2
                     -O0
  if impl(ghc >= 8.2)
    ghc-options:
                      -Wincomplete-uni-patterns
  else
    ghc-options:
                      -Wno-incomplete-patterns
                      -Wno-unused-imports

source-repository head
  type:     git
  location: https://github.com/lehins/massiv
  subdir:   massiv-test
