name:                massiv
version:             0.2.1.0
synopsis:            Massiv (Массив) is an Array Library.
description:         Multi-dimensional Arrays with fusion, stencils and parallel computation.
homepage:            https://github.com/lehins/massiv
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2018 Alexey Kuleshevich
category:            Data, Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag unsafe-checks
  description: Enable all the bounds checks for unsafe functions at the cost of
               significant performance penalty
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Data.Massiv.Array
                     , Data.Massiv.Array.Delayed
                     , Data.Massiv.Array.Manifest
                     , Data.Massiv.Array.Manifest.Vector
                     , Data.Massiv.Array.Mutable
                     , Data.Massiv.Array.Numeric
                     , Data.Massiv.Array.Stencil
                     , Data.Massiv.Array.Stencil.Unsafe
                     , Data.Massiv.Array.Unsafe
                     , Data.Massiv.Core
                     , Data.Massiv.Core.Scheduler
                     , Data.Massiv.Core.Index

  other-modules:       Data.Massiv.Array.Delayed.Internal
                     , Data.Massiv.Array.Delayed.Interleaved
                     , Data.Massiv.Array.Delayed.Windowed
                     , Data.Massiv.Array.Manifest.Boxed
                     , Data.Massiv.Array.Manifest.Internal
                     , Data.Massiv.Array.Manifest.List
                     , Data.Massiv.Array.Manifest.Primitive
                     , Data.Massiv.Array.Manifest.Storable
                     , Data.Massiv.Array.Manifest.Unboxed
                     , Data.Massiv.Array.Ops.Construct
                     , Data.Massiv.Array.Ops.Fold
                     , Data.Massiv.Array.Ops.Fold.Internal
                     , Data.Massiv.Array.Ops.Map
                     , Data.Massiv.Array.Ops.Slice
                     , Data.Massiv.Array.Ops.Transform
                     , Data.Massiv.Array.Stencil.Convolution
                     , Data.Massiv.Array.Stencil.Internal
                     , Data.Massiv.Core.Common
                     , Data.Massiv.Core.Computation
                     , Data.Massiv.Core.Index.Class
                     , Data.Massiv.Core.Index.Ix
                     , Data.Massiv.Core.Index.Stride
                     , Data.Massiv.Core.Iterator
                     , Data.Massiv.Core.List
  build-depends:       base            >= 4.8 && < 5
                     , bytestring
                     , data-default-class
                     , deepseq
                     , ghc-prim
                     , primitive
                     , vector
  include-dirs: include
  install-includes: massiv.h

  if flag(unsafe-checks)
    cpp-options: -DMASSIV_UNSAFE_CHECKS

  if impl(ghc < 8.0)
    build-depends: semigroups
  if impl(ghc < 7.10)
    build-depends: unsupported-ghc-version > 1 && < 1

  default-language:    Haskell2010
  ghc-options:         -Wall


test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Spec.hs
  other-modules:      Data.Massiv.Array.DelayedSpec
                    , Data.Massiv.Array.Delayed.WindowedSpec
                    , Data.Massiv.Array.ManifestSpec
                    , Data.Massiv.Array.Manifest.VectorSpec
                    --, Data.Massiv.Array.MutableSpec
                    , Data.Massiv.Array.Ops.ConstructSpec
                    , Data.Massiv.Array.Ops.FoldSpec
                    , Data.Massiv.Array.Ops.SliceSpec
                    , Data.Massiv.Array.Ops.TransformSpec
                    , Data.Massiv.Array.StencilSpec
                    , Data.Massiv.CoreArbitrary
                    , Data.Massiv.Core.IndexSpec
                    , Data.Massiv.Core.SchedulerSpec
  build-depends:      base            >= 4.8 && < 5
                    , bytestring
                    , deepseq
                    , data-default
                    , safe-exceptions
                    , massiv
                    , hspec
                    , QuickCheck
                    , vector
  if impl(ghc < 8.0)
    build-depends: semigroups

  default-language:   Haskell2010
  ghc-options:        -Wall -O2 -fno-warn-orphans -threaded -with-rtsopts=-N2

source-repository head
  type:     git
  location: https://github.com/lehins/massiv
