name:                massiv
version:             1.0.2.0
synopsis:            Massiv (Массив) is an Array Library.
description:         Multi-dimensional Arrays with fusion, stencils and parallel computation.
homepage:            https://github.com/lehins/massiv
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2018-2022 Alexey Kuleshevich
category:            Array, Data, Data Structures, Parallelism
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10
tested-with:          GHC == 8.0.2
                    , GHC == 8.2.2
                    , GHC == 8.4.4
                    , GHC == 8.6.5
                    , GHC == 8.8.4
                    , GHC == 8.10.7
                    , GHC == 9.0.2
                    , GHC == 9.2.4

flag unsafe-checks
  description: Enable all the bounds checks for unsafe functions at the cost of
               performance penalty
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Data.Massiv.Array
                     , Data.Massiv.Array.Delayed
                     , Data.Massiv.Array.Manifest
                     , Data.Massiv.Array.Manifest.Vector
                     , Data.Massiv.Array.Mutable
                     , Data.Massiv.Array.Mutable.Algorithms
                     , Data.Massiv.Array.Mutable.Atomic
                     , Data.Massiv.Array.Numeric
                     , Data.Massiv.Array.Numeric.Integral
                     , Data.Massiv.Array.Stencil
                     , Data.Massiv.Array.Unsafe
                     , Data.Massiv.Core
                     , Data.Massiv.Core.Index
                     , Data.Massiv.Core.List
                     , Data.Massiv.Core.Operations
                     , Data.Massiv.Vector
                     , Data.Massiv.Vector.Stream

  other-modules:       Data.Massiv.Array.Delayed.Interleaved
                     , Data.Massiv.Array.Delayed.Pull
                     , Data.Massiv.Array.Delayed.Push
                     , Data.Massiv.Array.Delayed.Stream
                     , Data.Massiv.Array.Delayed.Windowed
                     , Data.Massiv.Array.Manifest.Boxed
                     , Data.Massiv.Array.Manifest.Internal
                     , Data.Massiv.Array.Manifest.List
                     , Data.Massiv.Array.Manifest.Primitive
                     , Data.Massiv.Array.Manifest.Storable
                     , Data.Massiv.Array.Manifest.Unboxed
                     , Data.Massiv.Array.Mutable.Internal
                     , Data.Massiv.Array.Ops.Construct
                     , Data.Massiv.Array.Ops.Fold
                     , Data.Massiv.Array.Ops.Fold.Internal
                     , Data.Massiv.Array.Ops.Map
                     , Data.Massiv.Array.Ops.Slice
                     , Data.Massiv.Array.Ops.Sort
                     , Data.Massiv.Array.Ops.Transform
                     , Data.Massiv.Array.Stencil.Convolution
                     , Data.Massiv.Array.Stencil.Internal
                     , Data.Massiv.Array.Stencil.Unsafe
                     , Data.Massiv.Core.Common
                     , Data.Massiv.Core.Exception
                     , Data.Massiv.Core.Index.Internal
                     , Data.Massiv.Core.Index.Ix
                     , Data.Massiv.Core.Index.Stride
                     , Data.Massiv.Core.Index.Tuple
                     , Data.Massiv.Core.Index.Iterator
                     , Data.Massiv.Core.Loop
                     , Data.Massiv.Vector.Unsafe
  build-depends:       base >= 4.9 && < 5
                     , bytestring
                     , deepseq
                     , exceptions
                     , scheduler >= 2.0.0 && < 3
                     , primitive >= 0.7.1.0
                     , random >= 1.2.0
                     , unliftio-core
                     , vector >= 0.12

  include-dirs: include
  install-includes: massiv.h

  if flag(unsafe-checks)
    cpp-options: -DMASSIV_UNSAFE_CHECKS

  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:
                      -Wno-simplifiable-class-constraints
                      -Wincomplete-uni-patterns
  else
    ghc-options:
                      -Wno-incomplete-patterns
                      -Wno-unused-imports
                      -Wno-unrecognised-pragmas

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctests.hs
  build-depends: base
               , doctest >=0.15
  if impl(ghc >= 8.2) && impl(ghc < 8.10)
    build-depends: QuickCheck
                 , massiv
                 , mersenne-random-pure64
                 , random >= 1.2.0
                 , mwc-random >= 0.15.0.1
                 , splitmix >= 0.0.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/massiv
  subdir:   massiv
